--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
-  "version": "0.1.4",
-  "homepage": "https://d0t7.github.io/portfolio-host/",
+  "version": "0.1.7",
+  "homepage": "https://d0t7.github.io/Portfolio/",
   "author": "Asim Ali Khan",
   "github": "https://github.com/D0T7",
   "private": true,
@@ -13,7 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
