--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,16 @@
-# name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
-#       - name: Install and Build
-#         run: |
-#           npm install
-#           npm run build
-#       - name: Deploy
-#         uses: JamesIves/github-pages-deploy-action@v4.4.1
-#         with:
-#           branch: gh-pages
-#           folder: build
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install and Deploy
+        run: |
+          npm install
+          npm run deploy
