--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.1.9",
+  "version": "v0.1.9",
   "homepage": "https://d0t7.github.io/Portfolio/",
   "author": "Asim Ali Khan",
   "github": "https://github.com/D0T7",
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "npm": "^9.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
